Changes to be committed: 	modified:   .vscode/settings.json 	modified:   ToDo 	modified:   public/index.html 	modified:   src/components/DashboardNavbar.js 	modified:   src/components/DashboardSidebar.js 	modified:   src/components/account/AccountProfile.js 	modified:   src/components/account/AccountProfileDetails.js 	modified:   src/components/dashboard/Budget.js 	modified:   src/components/dashboard/TasksProgress.js 	modified:   src/components/dashboard/TotalCustomers.js 	modified:   src/pages/Dashboard.js 	modified:   src/pages/Login.js 	modified:   src/pages/NotFound.js 	modified:   src/pages/ProductList.js 	modified:   src/pages/Register.js 	modified:   src/pages/Settings.js 	modified:   src/routes.js

--- a/ToDo
+++ b/ToDo
@@ -1,4 +1,7 @@
 Change colors to green -done
+Fix Navigation, let login come first, then dashboard -done
+Fix logout to redirect to login
+
 Remove unnecessary elements
 
 Add necessary pages 
